--- a/gb/23/3/12/n13948479.md
+++ b/gb/23/3/12/n13948479.md
@@ -1,31 +1,31 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中共依赖军工系造芯 或加速科技新冷战</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/03/id13944259-603024-600x400.jpg" />
 <h6>美国对先进半导体设备与技术封锁，丝毫未见放松，北京当局在备感危机时，喊出新型举国体制。这股造芯新势力的背后，依赖于国家科研与军工企业的战略协同发展，能否突破西方封锁？引起外界关注。（JENS SCHLUETER/AFP via Getty Images）
 </h6>
 <hr>
-	<p>【大纪元2023年03月12日讯】（大纪元记者林岑心采访报导）中共全国两会科技界代表大洗牌，由一批半导体芯片业者专家取代网络科技大佬，而换届后的政府官员亦多军工背景。专家认为，北京当局不断强调自主造芯，力抗美国联合盟友围堵的背后，军工系势力隐现，此举或将加速<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E4%B8%AD%E7%A7%91%E6%8A%80%E6%96%B0%E5%86%B7%E6%88%98.md#1">美中科技新冷战</a>到来。</p>
+	<p>【大纪元2023年03月12日讯】（大纪元记者林岑心采访报导）中共全国两会科技界代表大洗牌，由一批半导体芯片业者专家取代网络科技大佬，而换届后的政府官员亦多军工背景。专家认为，北京当局不断强调自主造芯，力抗美国联合盟友围堵的背后，军工系势力隐现，此举或将加速美中科技新冷战到来。</p>
 <h2>习主打一体化战略 军工协同造芯</h2>
 <p>过去一周，北京当局举行第14届全国人大和政治协商会议，俗称“两会”。今年遇上五年一度的国家机构和全国政协换届，“科技创新”依然是两会热词，但是传统科技创新的领军人物，如马云、马化腾等互联网大佬已经消失，取而代之的是小米雷军、华虹半导体董事长张素心、中国科学院大学校长李树深等26名涉及半导体产业的人物。</p>
 <p>3月12日，人大通过新任总理李强提名的所有高层官员，其中，军工出身的刘国中，以及曾经担任中国兵器工业集团总经理的张国清，双双出任国务院副总理，而长期主管武器装备、具有航太背景的李尚福，接替魏凤和出任国务委员兼国防部长。</p>
 <p>相关人事布局，呼应了习近平3月8日出席人大一次会议“军队与武警部队代表团会议”时对于“一体化国家战略体系”的谈话。他强调“党中央集中统一领导”，“深化科技协同创新，运用好国家实验室，加快推进高水平科技自立自强。”</p>
 <p>台湾中华经济研究院助研究员王国臣3月10日告诉大纪元，过去几年，中共当局打压网路平台业者，从网络数位经济转而强化半导体产业，同时强化军工系在芯片业扮演的角色。</p>
-<p>王国臣说，从军工系官僚大量被提拔到政治局、部委、省委一级，同时在这次机构改革中，科技部重整，工信部的重要性大幅提升，以及习近平对军队强调的战略一体化，“一切都是呼应他所谓的新型<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%BE%E5%9B%BD%E4%BD%93%E5%88%B6.md#1">举国体制</a>，预计未来几年内，他们会集中力量发展芯片。”</p>
+<p>王国臣说，从军工系官僚大量被提拔到政治局、部委、省委一级，同时在这次机构改革中，科技部重整，工信部的重要性大幅提升，以及习近平对军队强调的战略一体化，“一切都是呼应他所谓的新型举国体制，预计未来几年内，他们会集中力量发展芯片。”</p>
 <h2>国家科研结合军工企业 能突围西方围堵？</h2>
 <p>美国智库亚洲协会（Aisa Society）研究员吴国光2月发表报告指，在去年10月召开的二十大上，5名军工系官员被提拔进入政治局，说明军工系统作为特殊类型的制度安排，是习近平喜欢的一种治理模式。</p>
 <p>王国臣表示，军工系过去负责研发武器，现在北京当局计划运用军工所谓的传统，来克服民用的瓶颈，例如之前的“两弹一星”、“嫦娥计划”等，“它们（中共）的想法是既然我的核弹、导弹都可以研发，卫星都可以发射到外太空，那做个芯片有这么困难吗？所以它们现在希望透过军工的技术，或者是它们研发的传统，来克服被美国卡脖子的问题。”</p>
-<figure id="attachment_12906140" aria-describedby="caption-attachment-12906140" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/04/id12906140-495074.jpg"><img class="size-large wp-image-12906140" src="https://i.epochtimes.com/assets/uploads/2021/04/id12906140-495074-600x264.jpg" alt="" width="600" b="264" /></a><figcaption id="caption-attachment-12906140" class="wp-caption-text">中共将引军工集团势力协同发展半导体产业。图为中国航天集团研制的东风26弹道导弹。（中央社）</figcaption></figure>
+<figure id="attachment_12906140" aria-describedby="caption-attachment-12906140" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/04/id12906140-495074.jpg"><img decoding="async" class="size-large wp-image-12906140" src="https://i.epochtimes.com/assets/uploads/2021/04/id12906140-495074-600x264.jpg" alt="" width="600" b="264" /></a><figcaption id="caption-attachment-12906140" class="wp-caption-text">中共将引军工集团势力协同发展半导体产业。图为中国航天集团研制的东风26弹道导弹。（中央社）</figcaption></figure>
 <p>南台科技大学财务金融系助理教授朱岳中3月5日告诉大纪元，中共发展科研主要是凭借大量顶尖人才将美国等西方国家学到的技术带回中国，强化其研究，同时还有非法手段偷抢来的技术，“但美国很清楚，中国（中共）或许具备研发能力，实验室做得出来，但没有设备就生产不了。所以，美国游说日本和荷兰，围堵中国（中共）。”</p>
 <p>3月10日，彭博社引述知情人士透露，荷兰政府即将宣布的出口限制，将阻止ASML三个型号的光刻机贩售给中国，包括：TWINSCAN NXT:2000i、NXT:2050i、NXT:2100i，皆属于浸没式深紫外光刻机（DUV）。</p>
 <p>美日荷联手抵制先进半导体设备输中，引发北京当局忧虑，习近平罕见地公开批评，以美国为首的西方国家实施全方位的遏制、围堵、打压，带来严峻挑战。</p>
 <p>王国臣认为，中科院、军工企业合作造芯，确实会加速芯片的研发，可是这种完全依靠军工企业或国家力量主导的产业发展，风险很高，不见得会成功，“尽管它研发高超音速导弹可以穿越大气层、卫星可以飞到外太空，但是这和半导体技术不同，它发射到外太空的航空器，可能用到20nm芯片，但是今天市场上的芯片，已经发展到2nm、1nm，越做越小，要求的精细度、难度不同。”</p>
 <h2>对比台湾先进制造 中共造芯有“三缺”</h2>
-<p>王国臣认为，如果拿中共急欲发展的“新型<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%BE%E5%9B%BD%E4%BD%93%E5%88%B6.md#1">举国体制</a>”造芯计划，对比目前芯片产值全球第一的台湾半导体产业，或许可以一窥中共产业发展的前景。</p>
+<p>王国臣认为，如果拿中共急欲发展的“新型举国体制”造芯计划，对比目前芯片产值全球第一的台湾半导体产业，或许可以一窥中共产业发展的前景。</p>
 <p>“首先，在文化氛围上，中国大陆地大物博、市场也大，能够拒绝名利诱惑，愿意耐着性子发展芯片的难度较大，过去中国高分毕业的大学生多从事金融业，而台积电吸引的是台大电机系的学生，也就是台湾最优秀的人才去做半导体；而且台湾相对比较市场化，企业多实事求是，相较大陆奉行指令型的计划经济，强调党中央领导一切，由党外行领导整个芯片发展，恐怕会更加困难。”</p>
 <p>随着美国对芯片管制、封锁技术的项目不断扩增，王国臣认为，中共面临设备、材料从头做起，良率不足，成本又高，不利于全球竞争，未来只能限缩在国内市场，也就是所谓的内循环。</p>
-<figure id="attachment_13859991" aria-describedby="caption-attachment-13859991" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13859991-000_14N6E4-e1667628703748.jpg"><img class="size-large wp-image-13859991" src="https://i.epochtimes.com/assets/uploads/2022/11/id13859991-000_14N6E4-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13859991" class="wp-caption-text">荷兰ASML公司是全球唯一可以生产极紫外光刻机（EUV）的公司，目前已知有三个型号的浸没式深紫外光刻机（DUV）可能禁止出售给中国。图为2018年4月17日ASML荷兰总部实验室。（Emmanuel Dunand / AFP）</figcaption></figure>
+<figure id="attachment_13859991" aria-describedby="caption-attachment-13859991" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13859991-000_14N6E4-e1667628703748.jpg"><img decoding="async" class="size-large wp-image-13859991" src="https://i.epochtimes.com/assets/uploads/2022/11/id13859991-000_14N6E4-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13859991" class="wp-caption-text">荷兰ASML公司是全球唯一可以生产极紫外光刻机（EUV）的公司，目前已知有三个型号的浸没式深紫外光刻机（DUV）可能禁止出售给中国。图为2018年4月17日ASML荷兰总部实验室。（Emmanuel Dunand / AFP）</figcaption></figure>
 <p>台湾大学电机系教授林宗男3月5日告诉大纪元，中国半导体产业在成熟制程方面，或许可以自行发展出中国的产业链，但是在高阶领域先进制程上，中共面临着缺设备、缺高阶技术、缺人才的三缺窘境。</p>
 <h2>中共自主造芯 美加强封锁 冷战再启</h2>
 <p>据彭博社报导，拜登政府预告下个月将推出最新的限制措施，限制设备预计将超过目前项目的两倍，随着美中科技战越演越烈，全球芯片业将迎来怎样的变局？</p>
@@ -34,45 +34,36 @@
 <p>王国臣则认为，不止美国和中国，欧洲也在发展半导体自主计划，“然而，随着美国加强出口管制，结合盟友围堵，中国（中共）推动自力更生，美中双边贸易越来越淡，冷战格局将逐渐形成。”</p>
 <p>责任编辑：林妍#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/18/n13805571.md#1">中芯7奈米技术遭质疑 专家：中共砸钱难造芯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/24/n13832150.md#1">分析：造芯片比原子弹难 砸钱和举国体制都徒然</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930406.md#1">中国紫光展锐再掀造芯运动 专家吁产业提前因应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945804.md#1">分析：习走投无路下注举国造芯 但难突破</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/18/n13805571.md#1">中芯7奈米技术遭质疑 专家：中共砸钱难造芯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/24/n13832150.md#1">分析：造芯片比原子弹难 砸钱和举国体制都徒然</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/15/n13930406.md#1">中国紫光展锐再掀造芯运动 专家吁产业提前因应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/8/n13945804.md#1">分析：习走投无路下注举国造芯 但难突破</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/31/n9788740.md#1" target="_blank">高天韵：匈牙利“恐怖屋”的黑暗记录</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/20/n7912178.md#1" target="_blank">前军士长：四代早逝的厄运到我而止</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/8/n11241913.md#1" target="_blank">【征文】袁斌：中共怎样用党文化取代传统文化</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/9/23/n9661042.md#1" target="_blank">修大法顽疾遁无形 做好人春风化雨润无声</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953285.md#1">独家：“神的指引” 中领馆员工成功出逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954628.md#1">【百年真相】晚年街头乞讨 大师叶企孙往事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953674.md#1">春分一刻千金难买 你要知道的春分大小事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952068.md#1">前蜀异人精通异术 预测他人命数奇准</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955636.md#1">【未解之谜】记忆的迷思</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958403.md#1">【财商天下】德勤遭重罚 中共过河拆桥？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957886.md#1">【环球直击】美民间团体国会山集会 支持禁用TikTok</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958340.md#1">【十字路口】抖音四大风险 台积电护国大解密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957609.md#1">深圳高官孙女：家中存款9位数 “韭菜供的”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957429.md#1">分析：李强上任接连动作 对李克强不利</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957192.md#1">传刘亚洲收数千万政治献金 或被判死缓?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957045.md#1">露营陆综爆造假 陈伟霆等艺人回酒店被拍到</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957092.md#1">舒淇新造型显好身材 不节食减肥法引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956820.md#1">沈文程出道40年开唱 张菲挺老友现身又献声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957143.md#1">范丞丞与李晨将同框节目 范冰冰再度受关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13956312.md#1">新歌原唱是AI 金曲歌后陈珊妮忧歌手恐失业</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954459.md#1">樱桃抗癌减肥、治痛风  但吃时要注意1件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957337.md#1">奶酪是心脏的死敌？这样的奶酪对身体好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958305.md#1">蓝莓、豆角农药最多！美12种污染蔬果出炉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957502.md#1">预防心脏病从生活中做起 注意4个早期征兆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956668.md#1">连6年蝉联全球最幸福国家 芬兰开大师班授课</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/3/12/n13948479.htm">中共依赖军工系造芯 或加速科技新冷战</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948479.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/3/12/n13948479.htm">中共依赖军工系造芯 或加速科技新冷战</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/3/12/n13948479.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
